--- a/css/style.css
+++ b/css/style.css
@@ -181,12 +181,14 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("../img/header-wpu-bg.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -198,12 +200,24 @@ body {
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 50%
   );
+} */
+
+.hero .mask-container {
+  position: absolute;
+  inset: 0;
+  -webkit-mask-image: url("../img/header-bg.svg");
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
 }
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  /* max-width: 60rem; */
   margin-left: -35px;
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 130px;
 }
 
 .hero .content h1 {
@@ -271,6 +285,10 @@ body {
 
 .about .row .about-img img {
   width: 100%;
+  -webkit-mask-image: url("../img/menu/1327960.svg");
+  -webkit-mask-size: 75%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
 }
 
 .about .row .content {
